# pyAutoBeam

./: .gitignore  README.md  pyproject.toml
src/pyautobeam/: __init__.py
src/pyautobeam/attenuation/: README.md  __init__.py  analysis.py  auto_attenuate.py  beer_lambert.py  nist_data.py  stats.py
src/pyautobeam/deprecated/data/: Cu_att_data.txt
src/pyautobeam/deprecated/physics/: __init__.py  attenuation.py
src/pyautobeam/deprecated/utils/: __init__.py  attenuation_analysis.py
src/pyautobeam/deprecated/utils/deprecated/: auto_att_multiple_file.py  auto_att_single_file.py  scattering_analysis.py
src/pyautobeam/io/: __init__.py  hdf5_reader.py
src/pyautobeam/processing/: __init__.py  dark.py  mask.py
